--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,10 +22,12 @@ h2{
 }
 
 span{
-    text-align: right;
     color: grey;
 }
 #g{
     font-size: 42px;
     font-weight: 300;
+}
+footer{
+    text-align: right;
 }
